Changes for object XML

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 **/__pycache__
 .vscode
 **/Translation**
+force-app/main/default/objectTranslations
+force-app/main/default/standardValueSetTranslations
+**/objects/**
+**/objectTranslations/**
+**/standardValueSetTranslations/**
