--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,36 +1,208 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" ?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>*</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
-    </types>
-    <version>52.0</version>
+	<types>
+		<members>CaseType</members>
+		<members>CaseStatus</members>
+		<members>CaseReason</members>
+		<members>CaseOrigin</members>
+		<members>TaskPriority</members>
+		<members>TaskStatus</members>
+		<members>TaskSubject</members>
+		<name>StandardValueSetTranslation</name>
+	</types>
+	<types>
+		<members>Case.Account</members>
+		<members>Case.Asset</members>
+		<members>Case.BusinessHours</members>
+		<members>Case.CaseNumber</members>
+		<members>Case.Origin</members>
+		<members>Case.Owner</members>
+		<members>Case.Reason</members>
+		<members>Case.RecordType</members>
+		<members>Case.Source</members>
+		<members>Case.IsClosedOnCreate</members>
+		<members>Case.ContactEmail</members>
+		<members>Case.ContactFax</members>
+		<members>Case.ContactMobile</members>
+		<members>Case.Contact</members>
+		<members>Case.ContactPhone</members>
+		<members>Case.CreatedBy</members>
+		<members>Case.ClosedDate</members>
+		<members>Case.CreatedDate</members>
+		<members>Case.Description</members>
+		<members>Case.IsEscalated</members>
+		<members>Case.Comments</members>
+		<members>Case.Language</members>
+		<members>Case.LastModifiedBy</members>
+		<members>Case.Parent</members>
+		<members>Case.Priority</members>
+		<members>Case.Status</members>
+		<members>Case.Subject</members>
+		<members>Case.Type</members>
+		<members>Case.SuppliedCompany</members>
+		<members>Case.SuppliedEmail</members>
+		<members>Case.SuppliedName</members>
+		<members>Case.SuppliedPhone</members>
+		<members>Case.Approval_Comments__c</members>
+		<members>Case.Area_AEP_Market_RSS__c</members>
+		<members>Case.Brand__c</members>
+		<members>Case.Carrier__c</members>
+		<members>Case.Case_Age__c</members>
+		<members>Case.CC_Case_Creator_Manager__c</members>
+		<members>Case.Case_Description__c</members>
+		<members>Case.Category__c</members>
+		<members>Case.CC_Category__c</members>
+		<members>Case.CC_Is_Case_Edited__c</members>
+		<members>Case.CC_Required_Case_Fields__c</members>
+		<members>Case.CC_HR_Mgr_on_Returned_Items__c</members>
+		<members>Case.CC_User_Manager_Check__c</members>
+		<members>Case.Cell_Phone__c</members>
+		<members>Case.Check_if_needed__c</members>
+		<members>Case.Claim__c</members>
+		<members>Case.Claim_Number__c</members>
+		<members>Case.Competitor_Price_Match__c</members>
+		<members>Case.Dashboard_Access__c</members>
+		<members>Case.Date__c</members>
+		<members>Case.Days_Since_Closed__c</members>
+		<members>Case.Days_Since_Start_Date__c</members>
+		<members>Case.Days_Since_Term_Date__c</members>
+		<members>Case.Delivery_Experience__c</members>
+		<members>Case.Department_Number__c</members>
+		<members>Case.ECR__c</members>
+		<members>Case.ECR_Origin__c</members>
+		<members>Case.ECR_Status__c</members>
+		<members>Case.CC_Email_Message_To_Address__c</members>
+		<members>Case.Employee_Name__c</members>
+		<members>Case.Employee_Name_Txt__c</members>
+		<members>Case.CC_Employee_Name__c</members>
+		<members>Case.Employee_Role__c</members>
+		<members>Case.Equip_Follow_Up__c</members>
+		<members>Case.Manual_Escalation__c</members>
+		<members>Case.Escalation_ECR_image__c</members>
+		<members>Case.CC_Escalation_Date__c</members>
+		<members>Case.Feedback_Case_Reason__c</members>
+		<members>Case.Final_Resolution__c</members>
+		<members>Case.Follow_Up_Date__c</members>
+		<members>Case.HAID_Sticker_Number__c</members>
+		<members>Case.Hire_Date__c</members>
+		<members>Case.Home_Address_City__c</members>
+		<members>Case.Home_Address_State__c</members>
+		<members>Case.Home_Address_Street__c</members>
+		<members>Case.Home_Address_Zip_Code__c</members>
+		<members>Case.Home_Store__c</members>
+		<members>Case.Installation_City__c</members>
+		<members>Case.Installation_Country__c</members>
+		<members>Case.Installation_State__c</members>
+		<members>Case.Installation_Street__c</members>
+		<members>Case.Installation_Zip__c</members>
+		<members>Case.Internal_Job_Number__c</members>
+		<members>Case.Invoice_Number__c</members>
+		<members>Case.CC_Is_Assigned_To_Queue__c</members>
+		<members>Case.Is_This_A_CC_Case__c</members>
+		<members>Case.Item_Model_Number__c</members>
+		<members>Case.Jira_Ticket__c</members>
+		<members>Case.Keyword__c</members>
+		<members>Case.Keyword_Other__c</members>
+		<members>Case.Labor_Category__c</members>
+		<members>Case.License_Plate_Number__c</members>
+		<members>Case.CC_Location__c</members>
+		<members>Case.Mail_Shirts__c</members>
+		<members>Case.Hiring_Manager__c</members>
+		<members>Case.Managers_Employee_Number__c</members>
+		<members>Case.Managers_Role__c</members>
+		<members>Case.medallia_xm__Medallia_Feedback_id__c</members>
+		<members>Case.medallia_xm__Medallia_internal_id__c</members>
+		<members>Case.CC_Migrated__c</members>
+		<members>Case.Name__c</members>
+		<members>Case.Name_of_Predecessor__c</members>
+		<members>Case.New_Hire_Name__c</members>
+		<members>Case.New_Territory__c</members>
+		<members>Case.Open_Case_Actions__c</members>
+		<members>Case.Order_Number__c</members>
+		<members>Case.Order_Business_Cards__c</members>
+		<members>Case.Order_P_Cards__c</members>
+		<members>Case.Owner_Name__c</members>
+		<members>Case.Owners_Role__c</members>
+		<members>Case.CC_Owner_Type__c</members>
+		<members>Case.Policy_Experience__c</members>
+		<members>Case.Portfolio_Name__c</members>
+		<members>Case.Position_Has_Predecessor__c</members>
+		<members>Case.CC_CAN_Postal_Code__c</members>
+		<members>Case.medallia_xm__PotentialLiability__c</members>
+		<members>Case.Predecessor__c</members>
+		<members>Case.Preferred_Area_Code__c</members>
+		<members>Case.Price_Match_Amount__c</members>
+		<members>Case.Purchase_Amount__c</members>
+		<members>Case.Purchase_Date__c</members>
+		<members>Case.CC_Queue_DevName__c</members>
+		<members>Case.Region__c</members>
+		<members>Case.Remove_from_Outlook_DL__c</members>
+		<members>Case.Remove_from_PBM__c</members>
+		<members>Case.Reopen_Date_Time__c</members>
+		<members>Case.Reopen_Reason__c</members>
+		<members>Case.Request_User_thru_Marketplace__c</members>
+		<members>Case.Resolution__c</members>
+		<members>Case.Resolved_by_Contact_Center__c</members>
+		<members>Case.Return_All_Discount_Card__c</members>
+		<members>Case.Return_Cell_Phone_Aircard__c</members>
+		<members>Case.Return_Laptop__c</members>
+		<members>Case.Return_P_Card__c</members>
+		<members>Case.Root_Cause__c</members>
+		<members>Case.Sales_ID__c</members>
+		<members>Case.Employee_Sales_ID__c</members>
+		<members>Case.Send_Access_Instructions__c</members>
+		<members>Case.Shirt_Size__c</members>
+		<members>Case.CC_Siebel_Id__c</members>
+		<members>Case.Siebel_Incident_Id__c</members>
+		<members>Case.CC_Siebel_Incident_Id__c</members>
+		<members>Case.CC_Social_Handle__c</members>
+		<members>Case.CC_Source__c</members>
+		<members>Case.Start_Date__c</members>
+		<members>Case.Submit_Day_1_Laptop_Accessories__c</members>
+		<members>Case.Submit_Info_to_Termination_Group__c</members>
+		<members>Case.Submit_Phone_Request__c</members>
+		<members>Case.Team_Manager__c</members>
+		<members>Case.Termination_Date__c</members>
+		<members>Case.Third_Party_Name__c</members>
+		<members>Case.TODAY__c</members>
+		<members>Case.Transfer_Other_Role_Type__c</members>
+		<members>Case.Transfer_Portfolio_Name__c</members>
+		<members>Case.Transfer_Region__c</members>
+		<members>Case.Transfer_Role__c</members>
+		<members>Case.Type_and_Category__c</members>
+		<members>Case.Type_of_Hire__c</members>
+		<members>Case.Update_Applicable_DL__c</members>
+		<members>Case.Update_SFDC_user_name_to_Open__c</members>
+		<members>Case.Update_Territory_and_Account_Ownership__c</members>
+		<members>Case.User_is_Case_Creator__c</members>
+		<members>Case.User_is_Hiring_Manager__c</members>
+		<members>Case.User_Role__c</members>
+		<members>Case.Vendor_Number__c</members>
+		<members>Case.CC_Web_Portal_User_Name__c</members>
+		<members>Case.Website_Experience_Detail__c</members>
+		<members>Task.Owner</members>
+		<members>Task.CallDurationInSeconds</members>
+		<members>Task.CallObject</members>
+		<members>Task.CallDisposition</members>
+		<members>Task.CallType</members>
+		<members>Task.Description</members>
+		<members>Task.CreatedBy</members>
+		<members>Task.IsRecurrence</members>
+		<members>Task.ActivityDate</members>
+		<members>Task.Email</members>
+		<members>Task.LastModifiedBy</members>
+		<members>Task.Who</members>
+		<members>Task.Phone</members>
+		<members>Task.Priority</members>
+		<members>Task.RecurrenceInterval</members>
+		<members>Task.What</members>
+		<members>Task.IsReminderSet</members>
+		<members>Task.RecurrenceRegeneratedType</members>
+		<members>Task.Status</members>
+		<members>Task.Subject</members>
+		<members>Task.RecordType</members>
+		<members>Task.TaskSubtype</members>
+		<members>Task.Type</members>
+		<name>CustomField</name>
+	</types>
 </Package>
